服装定制网页代码 https://clothing-1259369.view.sitestar.cn

--- a/html/works.html
+++ b/html/works.html
@@ -44,9 +44,13 @@
 
 <div class="works">
     <div>定制流程</div>
-    <div>
-        <div></div>
-        <div></div>
+    <div class="works-1">
+        <div>
+            <div><img src="../img/100-1.png" alt=""></div>
+            <div>预约咨询</div>
+        </div>
+        <div>与礼服师进行网络沟通或来店面对面沟通制作要求、确定款式。到店前可通过QQ或邮箱进行网络沟通并确定制作细节。
+        </div>
     </div>
     <div><img src="../img/下载.png" alt=""></div>
     <div>
