--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,8 @@
     <title>网站首页</title>
     <link rel="icon" href="../img/i4.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/top-end.css">
+    <script src="../js/jquery-3.6.0.min.js"></script>
 </head>
 <body class="body">
 <div class="top">
